<?xml version="1.0"?>
<package>
  <name>temperature_monitor</name>
  <version>0.1.0</version>
  <description>The temperature_monitor package</description>

  <license>GPLv2</license>
  <maintainer email="lsolanka@gmail.com">Lukas Solanka</maintainer>
  <author email="lsolanka@gmail.com">Lukas Solanka</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
